--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   freezed_annotation: ^2.0.3
   get_it: ^7.2.0
   injectable: ^1.5.3
-  # firebase_auth: ^3.3.20
+  firebase_auth: ^3.3.20
+  firebase_core: ^1.18.0
 
 dev_dependencies:
   flutter_test:
