--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   injectable: ^1.5.3
   firebase_auth: ^3.3.20
   firebase_core: ^1.18.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
